<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/new_bg_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="280.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:layout_height="0.0px" android:layout_weight="1.0" layout="@layout/dk_dialog_header" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="3.0">
        <LinearLayout android:layout_gravity="left" android:orientation="horizontal" android:id="@id/line_vertical" android:layout_width="2.0dip" android:layout_height="fill_parent" android:layout_marginLeft="76.0dip">
            <View android:background="#ffcccccc" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <View android:background="#ffffffff" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        </LinearLayout>
        <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ScrollView android:id="@id/scrollView1" android:scrollbars="none" android:layout_width="78.0dip" android:layout_height="fill_parent">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard1" android:background="@drawable/transparent" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardone" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:gravity="center" android:id="@id/btnGameCard2" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardtwo" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard3" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardthree" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard4" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardfour" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard5" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardfive" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard6" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardsix" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard7" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardseven" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard8" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardeight" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard9" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardnine" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard10" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardten" />
                    <Button android:textSize="12.0sp" android:textColor="#ff333333" android:id="@id/btnGameCard11" android:background="@drawable/transparent" android:visibility="gone" android:layout_width="78.0dip" android:layout_height="34.0dip" android:layout_marginTop="12.0dip" android:text="@string/dialog_cardeleven" />
                </LinearLayout>
            </ScrollView>
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
                <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip">
                    <include android:layout_width="fill_parent" android:layout_height="fill_parent" layout="@layout/dk_dialog_rechargecard_body" />
                </ScrollView>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
    <include android:layout_height="0.0px" android:layout_weight="1.0" layout="@layout/dk_dialog_footer" />
</LinearLayout>