<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/lineText" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="15.0dip" android:layout_weight="1.0">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:id="@id/dk_tv_tip_select_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dk_tip_quickpay_amount" />
                <TextView android:textSize="14.0sp" android:textColor="#ffff3300" android:id="@id/dk_tv_tip_select_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dk_tip_choose_recharge_ratio" />
            </LinearLayout>
            <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dk_tip_input_bankcard_number" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Spinner android:layout_gravity="center" android:id="@id/id_spinner_payment_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/id_btn_payment_default" android:background="@drawable/dk_payment_btn_orange_selector" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_margin="15.0dip" android:text="@string/dk_btn_string_pay" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>