<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:minHeight="240.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip">
        <TextView android:textSize="16.0sp" android:textColor="#ff666666" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dk_payment_the_amount" />
        <TextView android:textSize="14.0sp" android:textColor="#ffff6600" android:gravity="center" android:id="@id/tvRechargeTip" android:background="@drawable/bg_sum" android:layout_width="60.0dip" android:layout_height="28.0dip" android:layout_marginLeft="8.0dip" />
    </LinearLayout>
    <EditText android:textColor="#ff98bede" android:textColorHint="#ffdddddd" android:id="@id/etCardNumber" android:background="@drawable/login_input" android:paddingLeft="25.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="8.0dip" android:hint="@string/hint_recharge_card_number" android:singleLine="true" android:maxLength="20" android:drawablePadding="25.0dip" android:inputType="number" />
    <EditText android:textColor="#ff98bede" android:textColorHint="#ffdddddd" android:id="@id/etCardPassword" android:background="@drawable/login_input" android:paddingLeft="25.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:hint="@string/hint_recharge_card_password" android:singleLine="true" android:maxLength="19" android:drawablePadding="25.0dip" android:inputType="number" />
    <Button android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:id="@id/btnRecharge" android:background="@drawable/btn_card_recharge_selector" android:layout_width="fill_parent" android:layout_height="34.0dip" android:layout_margin="8.0dip" android:text="@string/dk_payment_channel_recharege" android:onClick="yeepay_rechargeAction" />
</LinearLayout>